--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
     font-size: 28px;
   }
   body {
-background-color: rgba(25, 83, 241, 0.568);
+background-color: rgb(35, 158, 196);
   }
   .container{
     padding-top: 15px;
